--- a/bundles/at.bestsolution.dart.editor/css/dark-highlight.css
+++ b/bundles/at.bestsolution.dart.editor/css/dark-highlight.css
@@ -1,67 +1,63 @@
-.dart.styled-text-area .selection-marker {
-	-fx-background-color: #2b5696;
-}
-
-.dart.styled-text-area .dart_default {
+.styled-text-area .dart.dart_default {
 	-styled-text-color: #b8c4d1;
 }
 
-.dart.styled-text-area .dart_operator {
+.styled-text-area .dart.dart_operator {
 	-styled-text-color: #b8c4d1;
 }
 
-.dart.styled-text-area .dart_bracket {
+.styled-text-area .dart.dart_bracket {
 	-styled-text-color: #b8c4d1;
 }
 
-.dart.styled-text-area .dart_keyword {
+.styled-text-area .dart.dart_keyword {
 	-styled-text-color: #d78b40;
 	-fx-font-weight: bold;
 }
 
-.dart.styled-text-area .dart_keyword_1 {
+.styled-text-area .dart.dart_keyword_1 {
 	-styled-text-color: #d78b40;
 	-fx-font-weight: bold;
 }
 
-.dart.styled-text-area .dart_keyword_2 {
+.styled-text-area .dart.dart_keyword_2 {
 	-styled-text-color: #d78b40;
 	-fx-font-weight: bold;
 }
 
-.dart.styled-text-area .dart_single_line_comment {
+.styled-text-area .dart.dart_single_line_comment {
 	-styled-text-color: #929292;
 }
 
-.dart.styled-text-area .dart_multi_line_comment {
+.styled-text-area .dart.dart_multi_line_comment {
 	-styled-text-color: #929292;
 }
 
-.dart.styled-text-area .dart_string {
+.styled-text-area .dart.dart_string {
 	-styled-text-color: #7c986c;
 }
 
-.dart.styled-text-area .dart_string_inter {
+.styled-text-area .dart.dart_string_inter {
 	-styled-text-color: #7c986c;
 	-fx-font-weight: bold;
 }
 
-.dart.styled-text-area .dart_builtin_types {
+.styled-text-area .dart.dart_builtin_types {
 	-styled-text-color: #74a567;
 	-fx-font-weight: bold;
 }
 
-.dart.styled-text-area .dart_doc {
+.styled-text-area .dart.dart_doc {
 	-styled-text-color: #74a567;
 }
 
-.dart.styled-text-area .dart_doc_reference {
+.styled-text-area .dart.dart_doc_reference {
 	-styled-text-color: #74a567;
 	-fx-font-weight: bold;
 }
 
 .dart-element-name {
-	
+
 }
 
 .dart-type-info {
