--- a/bundles/at.bestsolution.dart.editor/css/dark-highlight.css
+++ b/bundles/at.bestsolution.dart.editor/css/dark-highlight.css
@@ -1,44 +1,44 @@
 .styled-text-area .dart.dart_default {
-	-styled-text-color: #b8c4d1;
+	-styled-text-color: -source-editor-code;
 }
 
 .styled-text-area .dart.dart_operator {
-	-styled-text-color: #b8c4d1;
+	-styled-text-color: -source-editor-operator;
 }
 
 .styled-text-area .dart.dart_bracket {
-	-styled-text-color: #b8c4d1;
+	-styled-text-color: -source-editor-bracket;
 }
 
 .styled-text-area .dart.dart_keyword {
-	-styled-text-color: #d78b40;
+	-styled-text-color: -source-editor-keyword;
 	-fx-font-weight: bold;
 }
 
 .styled-text-area .dart.dart_keyword_1 {
-	-styled-text-color: #d78b40;
+	-styled-text-color: -source-editor-keyword;
 	-fx-font-weight: bold;
 }
 
 .styled-text-area .dart.dart_keyword_2 {
-	-styled-text-color: #d78b40;
+	-styled-text-color: -source-editor-keyword;
 	-fx-font-weight: bold;
 }
 
 .styled-text-area .dart.dart_single_line_comment {
-	-styled-text-color: #929292;
+	-styled-text-color: -source-editor-doc;
 }
 
 .styled-text-area .dart.dart_multi_line_comment {
-	-styled-text-color: #929292;
+	-styled-text-color: -source-editor-doc;
 }
 
 .styled-text-area .dart.dart_string {
-	-styled-text-color: #7c986c;
+	-styled-text-color: -source-editor-string;
 }
 
 .styled-text-area .dart.dart_string_inter {
-	-styled-text-color: #7c986c;
+	-styled-text-color: -source-editor-string;
 	-fx-font-weight: bold;
 }
 
@@ -48,11 +48,11 @@
 }
 
 .styled-text-area .dart.dart_doc {
-	-styled-text-color: #74a567;
+	-styled-text-color: -source-editor-api-doc;
 }
 
 .styled-text-area .dart.dart_doc_reference {
-	-styled-text-color: #74a567;
+	-styled-text-color: -source-editor-api-doc;
 	-fx-font-weight: bold;
 }
 
