added sample for dyn keywords

--- a/bundles/at.bestsolution.dart.app/css/default.css
+++ b/bundles/at.bestsolution.dart.app/css/default.css
@@ -1,3 +1,8 @@
 .root {
     -fx-font-size: 1em;
 }
+
+.styled-text-area .lua.dyn-sample {
+	-fx-fill: -source-editor-keyword;
+	-fx-font-weight: bold;
+}
